--- a/package.json
+++ b/package.json
@@ -8,12 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.17"
+    "bootstrap-vue": "^2.0.0-rc.11",
+    "lodash": "^4.17.11",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
+    "vue": "^2.5.17",
+    "vue-axios": "^2.1.4",
+    "vue-lodash": "^2.0.0",
+    "vue-moment": "^4.0.0",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.4",
     "@vue/cli-plugin-eslint": "^3.0.4",
     "@vue/cli-service": "^3.0.4",
+    "axios": "^0.18.0",
+    "vue-cli-plugin-axios": "0.0.4",
+    "vue-cli-plugin-moment": "^0.1.1",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
