--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-axios": "^2.1.4",
     "vue-lodash": "^2.0.0",
     "vue-moment": "^4.0.0",
+    "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
