--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-axios": "^2.1.4",
     "vue-lodash": "^2.0.0",
     "vue-moment": "^4.0.0",
+    "vue-notification": "^1.3.13",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
