--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@vue/cli-plugin-eslint": "^3.0.4",
     "@vue/cli-service": "^3.0.4",
     "axios": "^0.18.0",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
     "vue-cli-plugin-axios": "0.0.4",
     "vue-cli-plugin-moment": "^0.1.1",
     "vue-template-compiler": "^2.5.17"
