--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
     "vue": "^2.5.17",
+    "vue-awesome": "^3.1.3",
     "vue-axios": "^2.1.4",
     "vue-lodash": "^2.0.0",
     "vue-moment": "^4.0.0",
